--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,8 @@
 // Подключение шрифтов ===========================================================================================================================================================================================================================================================================
 //&display=swap -добавить при подключении через плагин
 
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic&display=swap);
+
 // Подключить, если есть локальные файлы шрифтов
 //@import "fonts/fonts";
 
@@ -18,11 +20,11 @@
 // ============================================================================================================================================================================================================================================================================================================================================================================================
 
 // По умолчанию шрифт ==============================================================================================================================================================================================================================================================================
-$fontFamily: "";
+$fontFamily: "Roboto";
 $fontSize: rem(14); // где 14(px) - размер шрифта по умолчанию с макета
 
 // Основные цвета
-$mainColor: #000; // Цвет шрифта по умолчанию
+$mainColor: #333; // Цвет шрифта по умолчанию
 
 // Настройка адаптивной сетки ===============================================================================================================================================================================================================================================================================================
 
